<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.gmpsop.standardoperatingprocedures.Activities.SearchOption">

        <LinearLayout
            android:id="@+id/logo_slogan_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_option_Logo"
                style="@style/splashLogo"
                android:layout_width="@dimen/loginLogo_width"
                android:layout_height="@dimen/loginLogo_height"
                android:contentDescription="@string/sloganImageDescription"
                android:src="@drawable/logo" />

            <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
                android:id="@+id/search_option_Slogan"
                style="@style/splashSlogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sloganText" />

        </LinearLayout>

        <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/search_option_recommendation"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:rowCount="1">

            <LinearLayout
                android:id="@+id/search_option_voice_layout_button"
                android:layout_width="@dimen/aboutUsGridCell_width"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:background="@drawable/shape_rectangle_button_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="@dimen/aboutUsImageFrame_width_height"
                    android:layout_height="@dimen/aboutUsImageFrame_width_height">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/search_option_voice"
                        android:src="@drawable/dashboard_ask_a_gmp_term" />
                </RelativeLayout>

                <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
                    style="@style/aboutUsGridText"
                    android:text="@string/search_option_voice" />

                <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
                    style="@style/Search_option_button_hint"
                    android:text="@string/search_option_voice_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_option_search_layout_button"
                android:layout_width="@dimen/aboutUsGridCell_width"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:background="@drawable/shape_rectangle_button_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5.0dip">

                <RelativeLayout
                    android:layout_width="@dimen/aboutUsImageFrame_width_height"
                    android:layout_height="@dimen/aboutUsImageFrame_width_height">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/search_option_Search"
                        android:src="@drawable/dashboard_search_a_gmp_term" />
                </RelativeLayout>

                <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
                    style="@style/aboutUsGridText"
                    android:text="@string/search_option_Search" />


                <com.gmpsop.standardoperatingprocedures.CustomViews.MyTextView
                    style="@style/Search_option_button_hint"
                    android:text="@string/search_option_Search_hint" />


            </LinearLayout>
        </GridLayout>


    </LinearLayout>


</ScrollView>

